Navbar fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ li {
   -moz-transition: all 0.5s ease;
   -ms-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
-  z-index: 99;
+  z-index: 150;
 }
 .sideMenu:hover, .sideMenu:focus {
   width: 220px;
@@ -656,7 +656,7 @@ img {
   background-image: url("/images/London.png");
   background-position: center center;
   background-size: cover;
-  opacity: 0.05;
+  opacity: 0.1;
 }
 #contact > .form-container {
   width: 100%;
