--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -13,7 +13,7 @@
       background-image: url("/images/London.png");
       background-position: center center;
       background-size: cover;
-      opacity: 0.05;
+      opacity: 0.1;
    }
 
    & > .form-container {
