--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -9,7 +9,7 @@
     -ms-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
 
-    z-index: 99;
+    z-index: 150;
 
     &:hover,&:focus
     {
